Fix alignemnt

--- a/modal.css
+++ b/modal.css
@@ -4,35 +4,38 @@
 }
 
 h2.popUp {
-  margin-top: 5%;
+  margin-top: 3%;
   margin-bottom: 3%;
-  width: 50;
+  width: 500px;
+  font-size: 2em;
 }
 
 .popupContainer {
   position: fixed;
   top: 0;
   left: 0;
-  height: 97%;
-  width: 87%;
+  height: 95%;
+  width: 100vw;
   z-index: 2;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  padding-left: 0.9em;
+  padding-right: 2em;
   background: #fff;
   justify-content: start;
   margin-right: 6%;
-  margin-left: 3%;
+  margin-left: 10%;
   margin-top: 4%;
   border: 1px solid #dfe1e6;
   border-radius: 16px;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  overflow-y: auto;
 }
 
 p {
-  font-size: 0.7em;
-  line-height: 1.5em;
-  margin-bottom: 1px;
+  font-size: 1em;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
 .projectPopup {
@@ -58,7 +61,7 @@ p {
 }
 
 .popupLinkContainer a {
-  margin: 4%;
+  margin: 2%;
   color: #396df2;
   padding: 0.5rem 0.5rem;
   text-align: center;
@@ -105,22 +108,18 @@ p {
 }
 
 .sublinks > ul {
-  padding: 0;
   display: flex;
-  width: 70%;
-  justify-content: space-around;
+  padding: 0;
+  position: absolute;
+  width: 100%;
   flex-direction: row;
   list-style-type: disc;
   color: #000;
-  margin-left: 2%;
   margin-bottom: 2%;
-  direction: ltr;
-}
-
-.sublinks > ul > li {
-  list-style-type: disc;
-  padding: 1px;
-  color: #7a869a;
+  margin-left: 100px;
+  justify-content: start;
+  align-items: start;
+  gap: 10%;
 }
 
 .sublinksround > ul {
@@ -141,8 +140,14 @@ p {
 }
 
 @media (min-width: 768px) {
+  .subtittle {
+    margin-left: 5%;
+    width: 50px;
+  }
+
   p {
     font-size: 1em;
+    margin-top: 2%;
     margin-bottom: 1px;
   }
 
@@ -151,21 +156,23 @@ p {
     flex-direction: row;
     justify-content: space-between;
     justify-content: end;
-    align-items: flex-end;
     width: 90%;
-    height: 100%;
+    height: 100vh;
+    align-items: start;
+    left: 50%;
   }
 
   .popupContainer {
     position: fixed;
     top: 0;
-    left: 0;
-    height: 90%;
-    width: 95%;
+    left: 20%;
+    height: 98%;
+    width: 53%;
     z-index: 2;
     padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    padding-right: 0.9rem;
     background: #fff;
+    justify-content: start;
     margin-right: 3%;
     margin-left: 3%;
     margin-top: 1%;
@@ -173,9 +180,8 @@ p {
     border-radius: 16px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: flex-start;
-    overflow-y: auto;
+    overflow-y: scroll;
   }
 
   .popupLinkContainer a {
@@ -186,6 +192,8 @@ p {
     cursor: pointer;
     border: 1px solid #396df2;
     border-radius: 9px;
+    font-size: 0.9em;
+    width: 250px;
   }
 
   .imgsize {
@@ -194,9 +202,12 @@ p {
     width: 100%;
     height: 17.5rem;
     object-fit: contain;
+    margin-top: 0.4em;
     margin-bottom: 0;
     align-items: center;
     justify-content: center;
+    flex-shrink: 0;
+    min-height: 59%;
   }
 
   .bottomflex {
@@ -204,20 +215,21 @@ p {
     flex-direction: row;
     align-items: flex-start;
     padding: 0;
-    width: 100%;
+    width: 94%;
     height: fit-content;
     justify-content: flex-start;
     align-content: space-around;
     position: absolute;
-    top: 75%;
+    top: 74%;
+    left: 6%;
   }
 
-  .bottomflex > * { flex: 1.8; }
+  .bottomflex > * { flex: 1.1; }
 
   h2.popUp {
-    font-size: 3em;
-    margin-top: 3%;
-    margin-bottom: 1%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    margin-left: 5%;
   }
 
   h2 {
@@ -247,25 +259,43 @@ p {
   }
 
   .sublinks > ul {
-    padding: 0;
     display: flex;
-    width: 85%;
-    justify-content: space-around;
+    padding: 0;
+    position: absolute;
+    width: 50%;
     flex-direction: row;
     list-style-type: disc;
     color: #000;
-    margin-left: 3%;
-    margin-bottom: 4%;
-    float: right;
-    flex-wrap: nowrap;
+    margin-bottom: 2%;
+    margin-left: 20%;
+    justify-content: start;
+    align-items: start;
+    gap: 9%;
   }
 
   .sublinks > ul > li {
-    margin-top: 3%;
-    margin-bottom: 3%;
-    justify-content: space-around;
-    list-style-type: disc;
-    margin-left: 20px;
-    color: #7a869a;
+    padding-left: 0.9em;
+  }
+
+  li span {
+    position: relative;
+    left: -10px;
+  }
+
+  .popupLinkContainer a:focus {
+    background-color: #020a58;
+    color: white;
+  }
+
+  .popupLinkContainer a:hover {
+    background-color: #020a58;
+    color: white;
+    transition: 0.2s;
+  }
+
+  .popupLinkContainer a:disabled {
+    background-color: #f4f1f0;
+    border: none;
+    color: #5b5957;
   }
 }
